# deepin-compiz

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  NEWS  README.md  compiz.pc.in  config.h.core.in
cmake/: CMakeLists.txt  CompizBcop.cmake  CompizCommon.cmake  CompizDefaults.cmake  CompizDefaults.cmake.in  CompizGSettings.cmake  CompizGconf.cmake  CompizPackage.cmake  CompizPlugin.cmake  CompizTesting.cmake  EnableCoverageReport.cmake  FindCompiz.cmake  FindOpenGLES2.cmake  all_plugins_in_folder_example-CMakeLists.txt  base.cmake  copy_file_install_user_env.cmake  opt_install_file.cmake  recompile_gsettings_schemas_in_dir_user_env.cmake
cmake/plugin_extensions/: CompizGenGSettings.cmake  CompizGenGconf.cmake  CompizGenInstallData.cmake  CompizGenInstallImages.cmake  CompizOpenGLFixups.cmake
cmake/src/compiz/: compiz_discover_gtest_tests.cpp
compizconfig/: CMakeLists.txt
compizconfig/ccsm/: CMakeLists.txt  ccsm  ccsm.desktop.in  setup.py
compizconfig/ccsm/ccm/: Constants.py.in  Settings.py  Utils.py  Widgets.py
compizconfig/cmake/: exec_setup_py_with_destdir.cmake
compizconfig/compizconfig-python/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  MANIFEST.in  NEWS  compizconfig-python.pc.in  setup.py
compizconfig/compizconfig-python/src/: compizconfig.pyx
compizconfig/compizconfig-python/tests/: __init__.py  compiz_config_test.py  test_backend.py  test_plugin.py  test_profile.py  test_setting.py
compizconfig/gconf/: AUTHORS  CMakeLists.txt
compizconfig/gconf/src/: gconf.c
compizconfig/gsettings/: CMakeLists.txt  ChangeLog  NEWS  org.compiz.gschema.xml
compizconfig/integration/: CMakeLists.txt
compizconfig/libcompizconfig/: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  libcompizconfig.pc.in  libcompizconfig_internal.pc.in
compizconfig/mocks/: CMakeLists.txt
compizconfig/tests/: CMakeLists.txt  compizconfig_backend_concept_test.cpp  compizconfig_backend_concept_test.h  compizconfig_backend_concept_test_environment_interface.h  compizconfig_backend_concept_test_internal.h  compizconfig_ccs_item_in_list_matcher.cpp  compizconfig_ccs_item_in_list_matcher.h  compizconfig_ccs_list_equality.cpp  compizconfig_ccs_list_equality.h  compizconfig_ccs_list_wrapper.cpp  compizconfig_ccs_list_wrapper.h  compizconfig_ccs_mocked_allocator.h  compizconfig_ccs_setting_value_matcher.cpp  compizconfig_ccs_setting_value_matcher.h  compizconfig_ccs_setting_value_operators.cpp  compizconfig_ccs_setting_value_operators.h  compizconfig_ccs_settings_test_fixture.h  compizconfig_ccs_variant_types.h  compizconfig_test_value_combiners.cpp  compizconfig_test_value_combiners.h
gtk/: CMakeLists.txt  config.h.gtk.in
gtk/gnome/: 50-compiz-navigation.xml.in  50-compiz-windows.xml.in  CMakeLists.txt  compiz.desktop.in
gtk/window-decorator/: CMakeLists.txt  TODO  actionmenu.c  blurprops.c  cairo.c  decorator.c  decorprops.c  events.c  forcequit.c  frames.c  gdk.c  gtk-window-decorator.c  gtk-window-decorator.h  gwd-cairo-window-decoration-util.c  gwd-cairo-window-decoration-util.h  gwd-metacity-window-decoration-util.c  gwd-metacity-window-decoration-util.h  gwd-settings-interface.c  gwd-settings-interface.h  gwd-settings-notified-interface.c  gwd-settings-notified-interface.h  gwd-settings-notified.c  gwd-settings-notified.h  gwd-settings-storage-gconf.c  gwd-settings-storage-gconf.h  gwd-settings-storage-gsettings.c  gwd-settings-storage-gsettings.h  gwd-settings-storage-interface.c  gwd-settings-storage-interface.h  gwd-settings-writable-interface.c  gwd-settings-writable-interface.h  gwd-settings-xproperty-interface.c  gwd-settings-xproperty-interface.h  gwd-settings-xproperty-storage.c  gwd-settings-xproperty-storage.h  gwd-settings.c  gwd-settings.h  gwd.schemas.in  metacity.c  org.compiz.gwd.gschema.xml  (+6 more)
include/core/: CMakeLists.txt  abiversion.h  action.h  atoms.h  core.h  countedlist.h  global.h  icon.h  match.h  modifierhandler.h  option.h  output.h  plugin.h  point.h  privateunion.h  propertywriter.h  screen.h  session.h  size.h  string.h  templates.h  window.h  wrapsystem.h
kde/window-decorator-kde4/: CMakeLists.txt  decorator.cpp  decorator.h  kdecoration_plugins.h  main.cpp  options.cpp  switcher.cpp  switcher.h  utils.cpp  utils.h  window.cpp  window.h
libdecoration/: CMakeLists.txt  config.h.libdecoration.in  decoration.c
metadata/: CMakeLists.txt  core.xml.in
plugins/blur/: CMakeLists.txt  blur.xml.in
plugins/blur/src/: blur.cpp  blur.h
plugins/ccp/: CMakeLists.txt
plugins/composite/: CMakeLists.txt  compiz-composite.pc.in  composite.xml.in
plugins/dbus/: CMakeLists.txt  dbus.xml.in
plugins/decor/: CMakeLists.txt  decor.xml.in
plugins/expo/: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  expo.xml.in
plugins/grid/: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  grid.xml.in
plugins/imgsvg/: CMakeLists.txt  imgsvg.xml.in
plugins/kde/: CMakeLists.txt  kde.xml.in
plugins/opengl/: CMakeLists.txt  DRIVERS  compiz-opengl.pc.in  opengl.xml.in
plugins/place/: CMakeLists.txt  place.xml.in
po/: CMakeLists.txt  POTFILES.in  ka.po  zh_CN.po
src/: CMakeLists.txt  action.cpp  actions.cpp  atoms.cpp  event.cpp  eventmanagement.h  eventsource.cpp  global.cpp  icon.cpp  main.cpp  match.cpp  modifierhandler.cpp  option.cpp  output.cpp  outputdevices.cpp  outputdevices.h  outputdevices_x11.cpp  plugin.cpp  privateaction.h  privateeventsource.h  privateiosource.h  privateoption.h  privatescreen.h  privatesignalsource.h  privatestackdebugger.h  privatewindow.h  propertywriter.cpp  screen.cpp  session.cpp  signalsource.cpp  stackdebugger.cpp  window.cpp  windowgeometry.cpp
src/logmessage/: CMakeLists.txt
src/plugin/: CMakeLists.txt
src/pluginclasshandler/: CMakeLists.txt
src/point/: CMakeLists.txt
src/rect/: CMakeLists.txt
src/region/: CMakeLists.txt
src/servergrab/: CMakeLists.txt
src/string/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_outputdevices.cpp
src/timer/: CMakeLists.txt
src/window/: CMakeLists.txt
xslt/: CMakeLists.txt  bcop.xslt  compiz_gconf_schemas.xslt  compiz_gsettings_schemas.xslt.in  default_plugins.xslt
(+1012 files in other folders)
